CI: Run publish step on Windows machine

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -62,7 +62,7 @@ jobs:
     name: Publish
     needs: [build]
     if: "!contains(github.event.head_commit.message, 'skip-ci')"
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
