--- a/src/Cupboard.Tests/Cupboard.Tests.csproj
+++ b/src/Cupboard.Tests/Cupboard.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -13,7 +13,6 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
     <PackageReference Include="NSubstitute" Version="4.2.2" />
     <PackageReference Include="Shouldly" Version="4.0.3" />
-    <PackageReference Include="Spectre.IO.Testing" Version="0.3.0" />
     <PackageReference Include="Spectre.Verify.Extensions" Version="0.3.0" />
     <PackageReference Include="Verify.Xunit" Version="9.0.0-beta.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
@@ -24,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Cupboard.Testing\Cupboard.Testing.csproj" />
     <ProjectReference Include="..\Cupboard\Cupboard.csproj" />
   </ItemGroup>
 
