Publish Cupboard.Testing library

--- a/src/Cupboard.Testing/Cupboard.Testing.csproj
+++ b/src/Cupboard.Testing/Cupboard.Testing.csproj
@@ -2,7 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <LangVersion>9.0</LangVersion>
     <Nullable>enable</Nullable>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
