--- a/src/Cupboard.Testing/Cupboard.Testing.csproj
+++ b/src/Cupboard.Testing/Cupboard.Testing.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -17,7 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="Spectre.Console.Testing" Version="0.41.0" />
-    <PackageReference Include="Spectre.IO.Testing" Version="0.3.0" />
+    <PackageReference Include="Spectre.IO.Testing" Version="0.4.0" />
   </ItemGroup>
 
 </Project>
