--- a/src/Cupboard.Core/Cupboard.Core.csproj
+++ b/src/Cupboard.Core/Cupboard.Core.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="CliWrap" Version="3.3.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
     <PackageReference Include="Mono.Posix.NETStandard" Version="1.0.0" />
     <PackageReference Include="Spectre.Console" Version="0.41.0" />
     <PackageReference Include="Spectre.IO" Version="0.4.0" />
