--- a/src/Cupboard.Tests/Cupboard.Tests.csproj
+++ b/src/Cupboard.Tests/Cupboard.Tests.csproj
@@ -10,9 +10,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="NSubstitute" Version="4.2.2" />
     <PackageReference Include="Shouldly" Version="4.0.3" />
+    <PackageReference Include="Spectre.IO.Testing" Version="0.5.0" />
     <PackageReference Include="Spectre.Verify.Extensions" Version="0.3.0" />
     <PackageReference Include="Verify.Xunit" Version="9.0.0-beta.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
