--- a/src/Cupboard.Core/Cupboard.Core.csproj
+++ b/src/Cupboard.Core/Cupboard.Core.csproj
@@ -13,8 +13,9 @@
   <ItemGroup>
     <PackageReference Include="CliWrap" Version="3.3.3" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Mono.Posix.NETStandard" Version="1.0.0" />
     <PackageReference Include="Spectre.Console" Version="0.41.0" />
-    <PackageReference Include="Spectre.IO" Version="0.5.0" />
+    <PackageReference Include="Spectre.IO" Version="0.8.0" />
   </ItemGroup>
 
 </Project>
