Update .NET SDK to 6.0.300 and Cake to 2.2.0

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
 name: Publish
 
 on:
@@ -45,8 +46,6 @@ jobs:
 
       - name: Setup dotnet
         uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: 6.0.100
 
       - name: Build
         shell: bash
@@ -75,8 +74,6 @@ jobs:
 
       - name: Setup dotnet 5.0.301
         uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: 6.0.100
 
       - name: Publish
         shell: bash
