--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
 name: Continuous Integration
 on: pull_request
 
@@ -34,8 +35,6 @@ jobs:
 
       - name: Setup dotnet 6.0.100
         uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: 6.0.100
 
       - name: Build
         shell: bash
