add macOS module
add module to builder

--- a/src/Cupboard.Providers.MacOs/Cupboard.Providers.MacOs.csproj
+++ b/src/Cupboard.Providers.MacOs/Cupboard.Providers.MacOs.csproj
@@ -7,8 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Cupboard.Core\Cupboard.Core.csproj" />
       <ProjectReference Include="..\Cupboard.Providers\Cupboard.Providers.csproj" />
-      <ProjectReference Include="..\Cupboard\Cupboard.csproj" />
     </ItemGroup>
 
 </Project>
