--- a/src/Cupboard.Providers.MacOs/Cupboard.Providers.MacOs.csproj
+++ b/src/Cupboard.Providers.MacOs/Cupboard.Providers.MacOs.csproj
@@ -7,6 +7,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <AdditionalFiles Include="..\stylecop.json" Link="Properties\stylecop.json" />
+    </ItemGroup>
+
+    <ItemGroup>
       <ProjectReference Include="..\Cupboard.Core\Cupboard.Core.csproj" />
       <ProjectReference Include="..\Cupboard.Providers\Cupboard.Providers.csproj" />
     </ItemGroup>
