--- a/src/Cupboard.Tests/Cupboard.Tests.csproj
+++ b/src/Cupboard.Tests/Cupboard.Tests.csproj
@@ -10,13 +10,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
-    <PackageReference Include="NSubstitute" Version="4.2.2" />
-    <PackageReference Include="Shouldly" Version="4.0.3" />
-    <PackageReference Include="Spectre.Verify.Extensions" Version="0.3.0" />
-    <PackageReference Include="Verify.Xunit" Version="9.0.0-beta.1" />
-    <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.2" />
+    <PackageReference Include="NSubstitute" Version="5.0.0" />
+    <PackageReference Include="Shouldly" Version="4.2.1" />
+    <PackageReference Include="Spectre.Verify.Extensions" Version="18.0.0" />
+    <PackageReference Include="Verify.Xunit" Version="20.3.2" />
+    <PackageReference Include="xunit" Version="2.4.2" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -24,7 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Cupboard.Testing\Cupboard.Testing.csproj" />
-    <ProjectReference Include="..\Cupboard\Cupboard.csproj" />
+    
   </ItemGroup>
 
 </Project>
