--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,8 +33,8 @@ jobs:
         run: git fetch --tags
         shell: bash
 
-      - name: Setup dotnet 6.0.100
-        uses: actions/setup-dotnet@v1
+      - name: Setup .NET SDK
+        uses: actions/setup-dotnet@v3
 
       - name: Build
         shell: bash
